docs/styles/main.css
/* ... */
.lesson-consist__3 .lesson-consist__title-icon {
  top: -6.25rem;
  left: -2.5rem;
}

.lesson-consist__headtitle {
  margin-bottom: 3.75rem;
  font-family: 'Neometric Alt';
  font-size: 2.8125rem;
  font-weight: 600;
  text-align: center;
}

.lesson-consist__wrapper {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.lesson-consist__title {
  position: relative;
  margin-bottom: 3rem;
}

.lesson-consist__title-icon {
  z-index: 1;
  position: absolute;
  top: -5rem;
  left: 0;
}

.lesson-consist__title-icon img {
  max-height: 8.75rem;
}

.lesson-consist__title-text {
  width: fit-content;
  padding: 0.9375rem 1.75rem;
  font-family: 'Neometric Alt';
  font-size: 1.75rem;
  font-weight: 600;
  line-height: 2.125rem;
  background: var(--white-color);
  transform: rotate(-5.61deg);
}

.lesson-consist__text {
  max-width: 29.6875rem;
  font-size: 1.125rem;
  line-height: 1.4;
}

.lesson-consist__infoblock {
  position: relative;
  padding: 2.8125rem 1.25rem;
  background: var(--white-color);
}

.lesson-consist__infoblock::before {
  position: absolute;
  top: -2.5rem;
  right: 1.25rem;
  width: 4.8125rem;
  height: 4.625rem;
  content: " ";
  background-size: contain;
  background-repeat: no-repeat;
  background-image: url("data:image/svg+xml,%3Csvg width='108' height='108' viewBox='0 0 108 108' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M47.9221 95.6102C52.6439 95.6104 57.0829 93.7716 60.4217 90.4329C63.7604 87.0941 65.5992 82.6551 65.5992 77.9332L65.5994 38.5253C65.5994 32.6772 60.8415 27.9193 54.9928 27.9191C49.1444 27.9193 44.3866 32.6775 44.3867 38.5259L44.3867 64.4752C44.3867 66.4278 45.9695 68.0106 47.9221 68.0106C49.8746 68.0108 51.4575 66.4278 51.4575 64.4752L51.4575 38.5258C51.4572 36.5762 53.0435 34.9903 54.993 34.9901C56.9426 34.9901 58.5287 36.5762 58.5287 38.5255L58.5282 77.933C58.528 80.7661 57.4249 83.4295 55.4216 85.4328C53.4183 87.4361 50.7549 88.5392 47.922 88.5392C42.0736 88.5391 37.3156 83.7814 37.3152 77.9332L37.3157 34.9904C37.3161 25.243 45.2462 17.3132 54.993 17.3132C59.7147 17.3131 64.1539 19.1517 67.4926 22.4904C70.8314 25.8292 72.6702 30.2686 72.6702 34.9904L72.6705 77.933C72.6705 79.8856 74.2533 81.4684 76.2059 81.4684C78.1582 81.4684 79.7413 79.8856 79.7413 77.933L79.741 34.9904C79.7412 28.3798 77.1669 22.1649 72.4925 17.4906C67.8181 12.8162 61.6033 10.2419 54.9928 10.2422C48.169 10.2422 41.983 13.0167 37.5017 17.4989C33.0214 21.9799 30.2449 28.168 30.2448 34.9903L30.2446 77.9333C30.2449 87.6804 38.1749 95.6101 47.9221 95.6102Z' fill='%23E2CF67'/%3E%3C/svg%3E");
}

.lesson-consist__infoblock-text {
  font-size: 0.875rem;
  line-height: 1.4;
}

.lesson-consist__carousel-item {
  max-width: 27rem;
}

.lesson-consist__carousel-item img {
  border: 0.4375rem solid #E2CF67;
  border-radius: 1.0625rem;
}

.firstblock {
  padding: 3.4375rem 0 4.375rem;
}

@keyframes resizeAnimate {
  0% {
    width: 90%;
  }

  50% {
    width: 100%;
  }

  100% {
    width: 90%;
  }
}

.firstblock__title {
  position: relative;
  margin-bottom: 1.5625rem;
  font-family: "Neometric Alt", sans-serif;
  font-size: 5.625rem;
  font-weight: 600;
  line-height: 1.2;
}

.firstblock__title span {
  padding: 0.3125rem;
  text-transform: uppercase;
  color: #27A3DD;
  border: 0.25rem dashed #27A3DD;
}

.firstblock ._star {
  position: absolute;
  top: -20%;
  right: -3%;
  display: block;
  width: 290px;
  height: 290px;
  content: " ";
  background-repeat: no-repeat;
  background-size: contain;
  background-image: url("../img/mainblock/star.png");
}

.firstblock__buttons {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 1.375rem;
}

.firstblock__button {
  cursor: pointer;
  display: flex;
  align-items: center;
  height: 4.875rem;
  margin-right: 0.625rem;
  padding-right: 1.375rem;
  padding-left: 1.375rem;
  font-family: "Neometric Alt", sans-serif;
  font-size: 1.125rem;
  font-weight: 600;
  color: var(--white-color);
  background: #171664;
  border: 0;
  border-radius: 6.25rem;
  transition: all 0.5s ease-in-out;
  white-space: nowrap;
}

.firstblock__button.elem-fixed {
  z-index: 999;
  position: fixed;
  padding-right: 1rem;
  padding-left: 1rem;
  top: 1.5rem;
  font-size: 0.625rem;
  height: 2.8125rem;
  animation: show 1s;
}

.firstblock__button.elem-fixed img {
  height: 2rem;
}

@keyframes show {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

.firstblock__button img {
  display: block;
  width: auto;
  height: 3.625rem;
  margin-right: 0.3125rem;
}

.firstblock__button:hover {
  background-color: #3a397b;
}

.firstblock .arrow-left-wrap {
  display: flex;
  justify-content: right;
  width: 72%;
}

.firstblock .arrow-left-wrap.hide-elem {
  display: none;
}

.firstblock .arrow-left {
  position: relative;
  display: block;
  width: 60%;
  height: 0.625rem;
  animation: resizeAnimate 1s linear infinite;
}

.firstblock .arrow-left::after {
  display: block;
  width: 0.625rem;
  height: 0.625rem;
  margin: 0;
  padding: 0;
  transform: rotate(-135deg);
  content: "";
  border-top: 0.1875rem solid #171663;
  border-right: 0.1875rem solid #171663;
}

.firstblock .arrow-left::before {
  position: absolute;
  top: 0.3125rem;
  left: 0;
  width: 100%;
  height: 0.1875rem;
  margin-left: -0.0625rem;
  background: #171663;
  content: " ";
}

.firstblock__full-video {
  overflow: hidden;
  width: 100%;
  height: auto;
  margin-bottom: 3.75rem;
  border-radius: 1.5rem;
}

.firstblock__full-video .vjs-poster {
  background-size: cover;
}

.firstblock__bottom {
  display: flex;
  justify-content: space-between;
  width: 100%;
  flex-wrap: wrap;
}

.firstblock__bottom-item__image {
  height: 7.5rem;
  margin-bottom: 1rem;
}

.firstblock__bottom-item__image img {
  width: auto;
  height: 100%;
}

.firstblock__bottom-item__info {
  max-width: 310px;
}
/* ... */

